tests/errors/method.b
S :: struct { x int }

fn main() {
    s := S{x: 1};
    s.bar();
}
